--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-Slate-Stone-Xeromatic-1440x953.jpg');
+    background-image: url('http://www.choicemusicevents.org/wp-content/uploads/2012/12/c_skylinesouthnight-credit-dcvb-clay-coleman.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
